--- a/Uebung1/Uebung1/Uebung1.vcxproj.filters
+++ b/Uebung1/Uebung1/Uebung1.vcxproj.filters
@@ -18,18 +18,15 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="targetver.h">
+    <ClInclude Include="MyString.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="stdafx.cpp">
+    <ClCompile Include="Uebung1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Uebung1.cpp">
+    <ClCompile Include="..\..\..\..\..\prcpp2\Uebung1\MyString.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
